# trl_cam_subsystem

./: Cargo.toml  README.md
src/: config.rs  main.rs  sys_cntrl.rs
src/config/: config_manager.rs  valid_cams.rs
src/sys_cntrl/: system_control.rs
